--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <dd>
           <h2>
             AgileTech Viet Nam
-            <span>Intern/Developer - Aug 2019-July 2020</span>
+            <span>Intern/Developer - Aug 2019 - July 2020</span>
           </h2>
           <ul>
             <li>
@@ -204,7 +204,7 @@
         <dd>
           <h2>
             Owallet
-            <span>Developer -> 6-2022-Now</span>
+            <span>Developer -> 6-2022 - Now</span>
           </h2>
           <ul>
             <li>Description: Extension for Oraichain</li>
@@ -226,7 +226,7 @@
 
           <h2>
             Oraidex
-            <span>Developer -> 3-2022-Now</span>
+            <span>Developer -> 3-2022 - Now</span>
           </h2>
 
           <ul>
@@ -243,7 +243,7 @@
 
           <h2>
             OraiScan
-            <span>Developer -> 3-2022-Now</span>
+            <span>Developer -> 3-2022 - Now</span>
           </h2>
           <ul>
             <li>Description: Oraiscan Block Explorer for Oraichain</li>
@@ -256,11 +256,173 @@
             <li>My responsibilities: Maintain Project</li>
             <li>Technologies used: ReactJS, Redux, Web3, CosmJs, Golang</li>
           </ul>
+
+          <h2>
+            12 Guardians
+            <span>Developer -> 12-2021 - 3-2022</span>
+          </h2>
+          <ul>
+            <li>Description: Horoscope application through 12 zodiac signs</li>
+            <li>My position: BE</li>
+            <li>Teamsize: 6</li>
+            <li>My responsibilities: Build Project API</li>
+            <li>Technologies used: NodeJS, Express , MongoDB , Blockchain</li>
+          </ul>
+
+          <h2>
+            Ipxhop Nft
+            <span>Developer -> 11-2021 - 3-2022</span>
+          </h2>
+          <ul>
+            <li>Description: English math learning app for students</li>
+            <li>My position: FE + BE</li>
+            <li>Teamsize: 10</li>
+            <li>My responsibilities: Build Project API</li>
+            <li>
+              Technologies used: ReactJS, Flutter, NodeJS, Express , MongoDB
+              /li>
+            </li>
+          </ul>
+
+          <h2>
+            English Math
+            <span>Developer -> 08-2021 - 11-2021</span>
+          </h2>
+          <ul>
+            <li>Description: Product auction website via blockchain</li>
+            <li>My position: BE</li>
+            <li>Teamsize: 5</li>
+            <li>My responsibilities: Build Project API</li>
+            <li>Technologies used: NodeJS, Express , MySQL , Blockchain</li>
+          </ul>
+
+          <h2>
+            Fantoo Project
+            <span>Developer -> 04-2021 - 07-2021</span>
+          </h2>
+          <ul>
+            <li>
+              Description: This is a management project with more sub-project.
+              Web live, WebAdmin, PC messenger and Fantoo App. This project
+              functions similarly to a social media platform allowing users to
+              information about K-Pop artists, join fan clubs, create live
+              broadcasts, watch broadcasts, and talk.
+            </li>
+            <li>My position: BE</li>
+            <li>Teamsize: 12</li>
+            <li>My responsibilities: Maintain Project Fantoo API</li>
+            <li>Technologies used: NodeJS, Express , MySQL , Blockchain</li>
+          </ul>
+
+          <h2>
+            Funpik Project
+            <span>Developer -> 01-2021 - 03-2021</span>
+          </h2>
+          <ul>
+            <li>
+              Description: Funpik app is a Korean learning and exam preparation
+              application based on the format of the Topik Korean proficiency
+              reading test..
+            </li>
+            <li>My position: BE</li>
+            <li>Teamsize: 8</li>
+            <li>
+              My responsibilities: Upgrade and adding new functions Project
+              Admin
+            </li>
+            <li>Technologies used: ReactJS , AntDesign, UmiJS , TypeScript</li>
+          </ul>
+
+          <h2>
+            Safe-Suite CMS
+            <span>Developer -> 08-2020 - 02-2021</span>
+          </h2>
+          <ul>
+            <li>Description: Computer system management of enterprise</li>
+            <li>My position: FE</li>
+            <li>Teamsize: 10</li>
+            <li>My responsibilities: Upgrade and adding new functions</li>
+            <li>Technologies used: ReactJS , Redux , TypeScript</li>
+          </ul>
+
+          <h2>
+            Web-Addon CMS
+            <span>Developer -> 12-2020 - 01-2021</span>
+          </h2>
+          <ul>
+            <li>Description: Computer system management of enterprise</li>
+            <li>My position: FE</li>
+            <li>Teamsize: 10</li>
+            <li>My responsibilities: Upgrade and adding new functions</li>
+            <li>Technologies used: ReactJS , Redux , TypeScript</li>
+          </ul>
+
+          <h2>
+            Vbee CMS Management
+            <span>Developer -> 04-2020 - 07-2020</span>
+          </h2>
+          <ul>
+            <li>Description: Admin for VBee CMS for Telecom</li>
+            <li>My position: FE</li>
+            <li>Teamsize: 6</li>
+            <li>My responsibilities: Upgrade and adding new functions</li>
+            <li>Technologies used: ReactJS, AntDesign, UmiJS</li>
+          </ul>
+
+          <h2>
+            SMS Tool
+            <span>Developer -> 12-2019 - 03-2020</span>
+          </h2>
+          <ul>
+            <li>
+              Description: This is a project about marketing through sms and mms
+              networks using 3rd party providers Twilio , Vonage , Plivo , ...
+            </li>
+            <li>My position: FE + BE</li>
+            <li>Teamsize: 4</li>
+            <li>My responsibilities: Upgrade and adding new functions</li>
+            <li>
+              Technologies used: ReactJS, AntDesign, UmiJS, NodeJS, Express,
+              MySQL
+            </li>
+          </ul>
+
+          <h2>
+            Camera Application
+            <span>Developer -> 10-2019 - 12-2019</span>
+          </h2>
+          <ul>
+            <li>
+              Description: Camera Recording Application and export to file with
+              Audio + video.
+            </li>
+            <li>My position: FE + BE</li>
+            <li>Teamsize: 5</li>
+            <li>My responsibilities: Upgrade and adding new functions</li>
+            <li>
+              Technologies used: ReactJS , NodeJS , Express , ElectronJS ,
+              SQLite
+            </li>
+          </ul>
+
+          <h2>
+            Responsive UI
+            <span>Developer -> 8-2019 - 10-2019</span>
+          </h2>
+          <ul>
+            <li>Description: Convert from PSD, Design file to ReactJS.</li>
+            <li>My position: FE</li>
+            <li>Teamsize: 1</li>
+            <li>
+              My responsibilities: Convert from PSD, Design file to ReactJS
+            </li>
+            <li>Technologies used: Html, Css, Js,ReactJS</li>
+          </ul>
         </dd>
         <dd class="clear"></dd>
 
         <dt>Hobbies</dt>
-        <dd>World Domination, Deep Sea Diving, Murder Most Foul</dd>
+        <dd>Tourism, Sport, Singing, ...</dd>
 
         <dd class="clear"></dd>
 
