--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>One Page Resume</title>
+    <title>profile cv</title>
 
     <style type="text/css">
       * {
