--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
           <h2>Technology skills</h2>
           <p>
             Html, css, js, web3, cosmjs, react, nodejs, express, mongodb, mysql,
-            git/github, gitlab, bitbuket, redmind, jira, trello, notion, vultr,
-            aws
+            git, vultr, aws
           </p>
 
           <!-- <h2>Computer skills</h2>
