--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <dt>Experience</dt>
         <dd>
           <h2>
-            AgileTech Viet Nam
+            AgileTech JSC
             <span>Intern/Developer - Aug 2019 - July 2020</span>
           </h2>
           <ul>
@@ -167,7 +167,7 @@
           </ul>
 
           <h2>
-            Chainos Solution
+            Chainos Solution JSC
             <span>Developer, August 2020 - March-2022</span>
           </h2>
           <ul>
@@ -180,7 +180,7 @@
           </ul>
 
           <h2>
-            Oraichain Labs
+            Oraichain Labs JSC
             <span>Blockchain Developer, April 2022 - Now</span>
           </h2>
           <ul>
