--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
 
   <body>
     <div id="page-wrap">
-      <img src="images/cthulu.png" alt="Photo of Cthulu" id="pic" />
+      <img
+        src="images/cthulu.jpeg"
+        width="200px"
+        height="200px"
+        alt="Photo of haunv"
+        id="pic"
+      />
 
       <div id="contact-info" class="vcard">
         <!-- Microformats! -->
