--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
           <h2>
             Oraichain Labs JSC
-            <span>Blockchain Developer, April 2022 - Now</span>
+            <span>Web3 Developer, April 2022 - Now</span>
           </h2>
           <ul>
             <li>
