--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 
   <body>
     <div id="page-wrap">
-      <img
+      <!-- <img
         src="images/cthulu.jpeg"
         width="200px"
         height="200px"
         alt="Photo of haunv"
         id="pic"
-      />
+      /> -->
 
       <div id="contact-info" class="vcard">
         <!-- Microformats! -->
